<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishwanathgowdak.EpochConverter.EpochMain" >

    <EditText
        android:id="@+id/epochText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/epochHint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/dateSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/epochText"
        android:layout_below="@+id/epochText"
        android:layout_marginTop="60dp"
        android:prompt="@string/d"
        android:entries="@array/date" />

    <Spinner
        android:id="@+id/monthSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/dateSpinner"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/epochText"
        android:prompt="@string/m"
        android:entries="@array/month" />
    <Spinner
        android:id="@+id/yearSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/monthSpinner"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/epochText"
        android:prompt="@string/y"
        android:entries="@array/year" />
    <Spinner
        android:id="@+id/hourSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/yearSpinner"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/epochText"
        android:prompt="@string/h"
        android:entries="@array/hour" />
    <Spinner
        android:id="@+id/minuteSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/hourSpinner"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/epochText"
        android:prompt="@string/min"
        android:entries="@array/minute" />
    <Spinner
        android:id="@+id/secondSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/minuteSpinner"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/epochText"
        android:prompt="@string/s"
        android:entries="@array/second" />

</RelativeLayout>
